# static_exception

./: .gitignore  CMakeLists.txt
include/: exception_memory_pool.hpp
parallel_test/: CMakeLists.txt  parallel_test_static_exception.cpp
win_test/: CMakeLists.txt  test_static_exception.cpp
